Fixed the log being overflown when seen in a smaller screen

--- a/src/CSS/Main.css
+++ b/src/CSS/Main.css
@@ -27,14 +27,13 @@ header {
 
 #ipopTitle img {
     margin-left : -20%;
-    margin-right: 1%;
+    margin-right: -15%;
     margin-top: -14%;
     margin-bottom: -15%;
 }
 
 #ipopTitle label {
-    margin-left : -15%;
-    margin-right: 5%;
+    margin-right: -10%;
     margin-top: -8%;
 }
 
